Fix relative URLs

--- a/index.html
+++ b/index.html
@@ -102,62 +102,62 @@ img.emoji {
 						</div>
 
 
-						<div class="collapse navbar-collapse navbar-ex1-collapse"><ul id="menu-admin-menu" class="nav navbar-nav"><li id="menu-item-141" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-141"><a href="file:///Users/jchajed/Downloads/AGM%20New%20AdminMenus.htm">Dashboard</a></li>
-<li id="menu-item-140" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-140 dropdown"><a href="file:///Users/jchajed/Downloads/AGM%20New%20AdminMenus.htm">Backup &amp; Restore</a><span class="caret sparkling-dropdown"></span>
+						<div class="collapse navbar-collapse navbar-ex1-collapse"><ul id="menu-admin-menu" class="nav navbar-nav"><li id="menu-item-141" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-141"><a href="index.html">Dashboard</a></li>
+<li id="menu-item-140" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-140 dropdown"><a href="index.html">Backup &amp; Restore</a><span class="caret sparkling-dropdown"></span>
 <ul role="menu" class=" dropdown-menu">
-	<li id="menu-item-150" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-150 dropdown"><a href="file:///Users/jchajed/Downloads/AGM%20New%20AdminMenus.htm">Backup</a><span class="caret sparkling-dropdown"></span>
+	<li id="menu-item-150" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-150 dropdown"><a href="index.html">Backup</a><span class="caret sparkling-dropdown"></span>
 	<ul role="menu" class=" dropdown-menu">
-		<li id="menu-item-151" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-151"><a href="file:///Users/jchajed/Downloads/AGM%20New%20AdminMenus.htm">Applications</a></li>
-		<li id="menu-item-153" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-153"><a href="file:///Users/jchajed/Downloads/AGM%20New%20AdminMenus.htm">Logical Groups</a></li>
+		<li id="menu-item-151" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-151"><a href="index.html">Applications</a></li>
+		<li id="menu-item-153" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-153"><a href="index.html">Logical Groups</a></li>
 	</ul>
 </li>
-	<li id="menu-item-154" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-154 dropdown"><a href="file:///Users/jchajed/Downloads/AGM%20New%20AdminMenus.htm">Restore</a><span class="caret sparkling-dropdown"></span>
+	<li id="menu-item-154" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-154 dropdown"><a href="index.html">Restore</a><span class="caret sparkling-dropdown"></span>
 	<ul role="menu" class=" dropdown-menu">
-		<li id="menu-item-158" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-158"><a href="file:///Users/jchajed/Downloads/AGM%20New%20AdminMenus.htm">Files &amp; Folders</a></li>
-		<li id="menu-item-156" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-156"><a href="file:///Users/jchajed/Downloads/AGM%20New%20AdminMenus.htm">Applications</a></li>
-		<li id="menu-item-155" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-155"><a href="file:///Users/jchajed/Downloads/AGM%20New%20AdminMenus.htm">Active Mounts</a></li>
-	</ul>
-</li>
-</ul>
-</li>
-<li id="menu-item-148" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-148 dropdown"><a href="file:///Users/jchajed/Downloads/AGM%20New%20AdminMenus.htm">Test/Dev</a><span class="caret sparkling-dropdown"></span>
-<ul role="menu" class=" dropdown-menu">
-	<li id="menu-item-166" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-166 dropdown"><a href="file:///Users/jchajed/Downloads/AGM%20New%20AdminMenus.htm">Capture</a><span class="caret sparkling-dropdown"></span>
-	<ul role="menu" class=" dropdown-menu">
-		<li id="menu-item-163" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-163"><a href="file:///Users/jchajed/Downloads/AGM%20New%20AdminMenus.htm">Applications</a></li>
-		<li id="menu-item-162" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-162"><a href="file:///Users/jchajed/Downloads/AGM%20New%20AdminMenus.htm">Logical Groups</a></li>
-	</ul>
-</li>
-	<li id="menu-item-167" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-167 dropdown"><a href="file:///Users/jchajed/Downloads/AGM%20New%20AdminMenus.htm">Access</a><span class="caret sparkling-dropdown"></span>
-	<ul role="menu" class=" dropdown-menu">
-		<li id="menu-item-165" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-165"><a href="file:///Users/jchajed/Downloads/AGM%20New%20AdminMenus.htm">Applications</a></li>
-		<li id="menu-item-164" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-164"><a href="file:///Users/jchajed/Downloads/AGM%20New%20AdminMenus.htm">Active Mounts</a></li>
+		<li id="menu-item-158" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-158"><a href="index.html">Files &amp; Folders</a></li>
+		<li id="menu-item-156" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-156"><a href="index.html">Applications</a></li>
+		<li id="menu-item-155" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-155"><a href="index.html">Active Mounts</a></li>
 	</ul>
 </li>
 </ul>
 </li>
-<li id="menu-item-149" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-149"><a href="file:///Users/jchajed/Downloads/AGM%20New%20AdminMenus.htm">Workflows</a></li>
-<li id="menu-item-145" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-145 dropdown"><a href="file:///Users/jchajed/Downloads/AGM%20New%20AdminMenus.htm">SLA Architect</a><span class="caret sparkling-dropdown"></span>
+<li id="menu-item-148" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-148 dropdown"><a href="index.html">Test/Dev</a><span class="caret sparkling-dropdown"></span>
 <ul role="menu" class=" dropdown-menu">
-	<li id="menu-item-147" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-147"><a href="file:///Users/jchajed/Downloads/AGM%20New%20AdminMenus.htm">Templates</a></li>
-	<li id="menu-item-146" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-146"><a href="file:///Users/jchajed/Downloads/AGM%20New%20AdminMenus.htm">Profiles</a></li>
+	<li id="menu-item-166" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-166 dropdown"><a href="index.html">Capture</a><span class="caret sparkling-dropdown"></span>
+	<ul role="menu" class=" dropdown-menu">
+		<li id="menu-item-163" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-163"><a href="index.html">Applications</a></li>
+		<li id="menu-item-162" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-162"><a href="index.html">Logical Groups</a></li>
+	</ul>
+</li>
+	<li id="menu-item-167" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-167 dropdown"><a href="index.html">Access</a><span class="caret sparkling-dropdown"></span>
+	<ul role="menu" class=" dropdown-menu">
+		<li id="menu-item-165" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-165"><a href="index.html">Applications</a></li>
+		<li id="menu-item-164" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-164"><a href="index.html">Active Mounts</a></li>
+	</ul>
+</li>
 </ul>
 </li>
-<li id="menu-item-142" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-142 dropdown"><a href="file:///Users/jchajed/Downloads/AGM%20New%20AdminMenus.htm">Monitor</a><span class="caret sparkling-dropdown"></span>
+<li id="menu-item-149" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-149"><a href="index.html">Workflows</a></li>
+<li id="menu-item-145" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-145 dropdown"><a href="index.html">SLA Architect</a><span class="caret sparkling-dropdown"></span>
 <ul role="menu" class=" dropdown-menu">
-	<li id="menu-item-144" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-144"><a href="file:///Users/jchajed/Downloads/AGM%20New%20AdminMenus.htm">Jobs</a></li>
-	<li id="menu-item-143" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-143"><a href="file:///Users/jchajed/Downloads/AGM%20New%20AdminMenus.htm">Events</a></li>
+	<li id="menu-item-147" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-147"><a href="index.html">Templates</a></li>
+	<li id="menu-item-146" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-146"><a href="index.html">Profiles</a></li>
 </ul>
 </li>
-<li id="menu-item-132" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-132 dropdown"><a href="file:///Users/jchajed/Downloads/AGM%20New%20AdminMenus.htm">Administer</a><span class="caret sparkling-dropdown"></span>
+<li id="menu-item-142" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-142 dropdown"><a href="index.html">Monitor</a><span class="caret sparkling-dropdown"></span>
 <ul role="menu" class=" dropdown-menu">
-	<li id="menu-item-133" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-133"><a href="file:///Users/jchajed/Downloads/AGM%20New%20AdminMenus.htm">Appliances</a></li>
-	<li id="menu-item-134" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-134"><a href="file:///Users/jchajed/Downloads/AGM%20New%20AdminMenus.htm">Hosts</a></li>
-	<li id="menu-item-135" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-135"><a href="file:///Users/jchajed/Downloads/AGM%20New%20AdminMenus.htm">LDAP</a></li>
-	<li id="menu-item-136" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-136"><a href="file:///Users/jchajed/Downloads/AGM%20New%20AdminMenus.htm">Organization</a></li>
-	<li id="menu-item-137" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-137"><a href="file:///Users/jchajed/Downloads/AGM%20New%20AdminMenus.htm">Roles</a></li>
-	<li id="menu-item-138" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-138"><a href="file:///Users/jchajed/Downloads/AGM%20New%20AdminMenus.htm">Storage Pools</a></li>
-	<li id="menu-item-139" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-139"><a href="file:///Users/jchajed/Downloads/AGM%20New%20AdminMenus.htm">Users</a></li>
+	<li id="menu-item-144" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-144"><a href="index.html">Jobs</a></li>
+	<li id="menu-item-143" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-143"><a href="index.html">Events</a></li>
+</ul>
+</li>
+<li id="menu-item-132" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-132 dropdown"><a href="index.html">Administer</a><span class="caret sparkling-dropdown"></span>
+<ul role="menu" class=" dropdown-menu">
+	<li id="menu-item-133" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-133"><a href="index.html">Appliances</a></li>
+	<li id="menu-item-134" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-134"><a href="index.html">Hosts</a></li>
+	<li id="menu-item-135" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-135"><a href="index.html">LDAP</a></li>
+	<li id="menu-item-136" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-136"><a href="index.html">Organization</a></li>
+	<li id="menu-item-137" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-137"><a href="index.html">Roles</a></li>
+	<li id="menu-item-138" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-138"><a href="index.html">Storage Pools</a></li>
+	<li id="menu-item-139" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-139"><a href="index.html">Users</a></li>
 </ul>
 </li>
 </ul></div>
