--- a/AGM New Application Listing.htm
+++ b/AGM New Application Listing.htm
@@ -102,42 +102,42 @@ img.emoji {
 						</div>
 
 
-						<div class="collapse navbar-collapse navbar-ex1-collapse"><ul id="menu-nav-menu" class="nav navbar-nav"><li id="menu-item-28" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-28"><a href="file:///Users/jchajed/Downloads/AGM%20New%20Application%20Listing.htm">Dashboard</a></li>
-<li id="menu-item-27" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-27 dropdown"><a href="file:///Users/jchajed/Downloads/AGM%20New%20Application%20Listing.htm">Backup</a><span class="caret sparkling-dropdown"></span>
+						<div class="collapse navbar-collapse navbar-ex1-collapse"><ul id="menu-nav-menu" class="nav navbar-nav"><li id="menu-item-28" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-28"><a href="AGM%20New%20Application%20Listing.htm">Dashboard</a></li>
+<li id="menu-item-27" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-27 dropdown"><a href="AGM%20New%20Application%20Listing.htm">Backup</a><span class="caret sparkling-dropdown"></span>
 <ul role="menu" class=" dropdown-menu">
-	<li id="menu-item-37" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-37"><a href="file:///Users/jchajed/Downloads/AGM%20New%20Application%20Listing.htm">Applications</a></li>
-	<li id="menu-item-39" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-39"><a href="file:///Users/jchajed/Downloads/AGM%20New%20Application%20Listing.htm">Logical Groups</a></li>
+	<li id="menu-item-37" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-37"><a href="AGM%20New%20Application%20Listing.htm">Applications</a></li>
+	<li id="menu-item-39" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-39"><a href="AGM%20New%20Application%20Listing.htm">Logical Groups</a></li>
 </ul>
 </li>
-<li id="menu-item-30" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-30 dropdown"><a href="file:///Users/jchajed/Downloads/AGM%20New%20Application%20Listing.htm">Restore</a><span class="caret sparkling-dropdown"></span>
+<li id="menu-item-30" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-30 dropdown"><a href="AGM%20New%20Application%20Listing.htm">Restore</a><span class="caret sparkling-dropdown"></span>
 <ul role="menu" class=" dropdown-menu">
-	<li id="menu-item-36" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-36"><a href="file:///Users/jchajed/Downloads/AGM%20New%20Application%20Listing.htm">Files &amp; Folders</a></li>
-	<li id="menu-item-34" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-34"><a href="file:///Users/jchajed/Downloads/AGM%20New%20Application%20Listing.htm">Applications</a></li>
-	<li id="menu-item-33" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-33"><a href="file:///Users/jchajed/Downloads/AGM%20New%20Application%20Listing.htm">Active Mounts</a></li>
+	<li id="menu-item-36" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-36"><a href="AGM%20New%20Application%20Listing.htm">Files &amp; Folders</a></li>
+	<li id="menu-item-34" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-34"><a href="AGM%20New%20Application%20Listing.htm">Applications</a></li>
+	<li id="menu-item-33" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-33"><a href="AGM%20New%20Application%20Listing.htm">Active Mounts</a></li>
 </ul>
 </li>
-<li id="menu-item-75" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-75"><a href="file:///Users/jchajed/Downloads/AGM%20New%20Application%20Listing.htm">Workflows</a></li>
-<li id="menu-item-32" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-32 dropdown"><a href="file:///Users/jchajed/Downloads/AGM%20New%20Application%20Listing.htm">SLA Architect</a><span class="caret sparkling-dropdown"></span>
+<li id="menu-item-75" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-75"><a href="AGM%20New%20Application%20Listing.htm">Workflows</a></li>
+<li id="menu-item-32" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-32 dropdown"><a href="AGM%20New%20Application%20Listing.htm">SLA Architect</a><span class="caret sparkling-dropdown"></span>
 <ul role="menu" class=" dropdown-menu">
-	<li id="menu-item-41" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-41"><a href="file:///Users/jchajed/Downloads/AGM%20New%20Application%20Listing.htm">Templates</a></li>
-	<li id="menu-item-40" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-40"><a href="file:///Users/jchajed/Downloads/AGM%20New%20Application%20Listing.htm">Profiles</a></li>
+	<li id="menu-item-41" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-41"><a href="AGM%20New%20Application%20Listing.htm">Templates</a></li>
+	<li id="menu-item-40" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-40"><a href="AGM%20New%20Application%20Listing.htm">Profiles</a></li>
 </ul>
 </li>
-<li id="menu-item-29" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-29 dropdown"><a href="file:///Users/jchajed/Downloads/AGM%20New%20Application%20Listing.htm">Monitor</a><span class="caret sparkling-dropdown"></span>
+<li id="menu-item-29" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-29 dropdown"><a href="AGM%20New%20Application%20Listing.htm">Monitor</a><span class="caret sparkling-dropdown"></span>
 <ul role="menu" class=" dropdown-menu">
-	<li id="menu-item-74" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-74"><a href="file:///Users/jchajed/Downloads/AGM%20New%20Application%20Listing.htm">Jobs</a></li>
-	<li id="menu-item-73" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-73"><a href="file:///Users/jchajed/Downloads/AGM%20New%20Application%20Listing.htm">Events</a></li>
+	<li id="menu-item-74" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-74"><a href="AGM%20New%20Application%20Listing.htm">Jobs</a></li>
+	<li id="menu-item-73" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-73"><a href="AGM%20New%20Application%20Listing.htm">Events</a></li>
 </ul>
 </li>
-<li id="menu-item-31" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-31 dropdown"><a href="file:///Users/jchajed/Downloads/AGM%20New%20Application%20Listing.htm">Administer</a><span class="caret sparkling-dropdown"></span>
+<li id="menu-item-31" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-31 dropdown"><a href="AGM%20New%20Application%20Listing.htm">Administer</a><span class="caret sparkling-dropdown"></span>
 <ul role="menu" class=" dropdown-menu">
-	<li id="menu-item-43" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-43"><a href="file:///Users/jchajed/Downloads/AGM%20New%20Application%20Listing.htm">Hosts</a></li>
-	<li id="menu-item-42" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-42"><a href="file:///Users/jchajed/Downloads/AGM%20New%20Application%20Listing.htm">Appliances</a></li>
-	<li id="menu-item-48" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-48"><a href="file:///Users/jchajed/Downloads/AGM%20New%20Application%20Listing.htm">Users</a></li>
-	<li id="menu-item-46" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-46"><a href="file:///Users/jchajed/Downloads/AGM%20New%20Application%20Listing.htm">Roles</a></li>
-	<li id="menu-item-45" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-45"><a href="file:///Users/jchajed/Downloads/AGM%20New%20Application%20Listing.htm">Organization</a></li>
-	<li id="menu-item-44" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-44"><a href="file:///Users/jchajed/Downloads/AGM%20New%20Application%20Listing.htm">LDAP</a></li>
-	<li id="menu-item-47" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-47"><a href="file:///Users/jchajed/Downloads/AGM%20New%20Application%20Listing.htm">Storage Pools</a></li>
+	<li id="menu-item-43" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-43"><a href="AGM%20New%20Application%20Listing.htm">Hosts</a></li>
+	<li id="menu-item-42" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-42"><a href="AGM%20New%20Application%20Listing.htm">Appliances</a></li>
+	<li id="menu-item-48" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-48"><a href="AGM%20New%20Application%20Listing.htm">Users</a></li>
+	<li id="menu-item-46" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-46"><a href="AGM%20New%20Application%20Listing.htm">Roles</a></li>
+	<li id="menu-item-45" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-45"><a href="AGM%20New%20Application%20Listing.htm">Organization</a></li>
+	<li id="menu-item-44" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-44"><a href="AGM%20New%20Application%20Listing.htm">LDAP</a></li>
+	<li id="menu-item-47" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-47"><a href="AGM%20New%20Application%20Listing.htm">Storage Pools</a></li>
 </ul>
 </li>
 </ul></div>
