--- a/AGM New TDMMenus.htm
+++ b/AGM New TDMMenus.htm
@@ -102,41 +102,41 @@ img.emoji {
 						</div>
 
 
-						<div class="collapse navbar-collapse navbar-ex1-collapse"><ul id="menu-testdev-menu" class="nav navbar-nav"><li id="menu-item-106" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-106"><a href="file:///Users/jchajed/Downloads/AGM%20New%20TDMMenus.htm">Dashboard</a></li>
-<li id="menu-item-114" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-114 dropdown"><a href="file:///Users/jchajed/Downloads/AGM%20New%20TDMMenus.htm">Test/Dev Capture</a><span class="caret sparkling-dropdown"></span>
+						<div class="collapse navbar-collapse navbar-ex1-collapse"><ul id="menu-testdev-menu" class="nav navbar-nav"><li id="menu-item-106" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-106"><a href="AGM%20New%20TDMMenus.htm">Dashboard</a></li>
+<li id="menu-item-114" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-114 dropdown"><a href="AGM%20New%20TDMMenus.htm">Test/Dev Capture</a><span class="caret sparkling-dropdown"></span>
 <ul role="menu" class=" dropdown-menu">
-	<li id="menu-item-128" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-128"><a href="file:///Users/jchajed/Downloads/AGM%20New%20TDMMenus.htm">Applications</a></li>
-	<li id="menu-item-129" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-129"><a href="file:///Users/jchajed/Downloads/AGM%20New%20TDMMenus.htm">Logical Groups</a></li>
+	<li id="menu-item-128" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-128"><a href="AGM%20New%20TDMMenus.htm">Applications</a></li>
+	<li id="menu-item-129" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-129"><a href="AGM%20New%20TDMMenus.htm">Logical Groups</a></li>
 </ul>
 </li>
-<li id="menu-item-113" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-113 dropdown"><a href="file:///Users/jchajed/Downloads/AGM%20New%20TDMMenus.htm">Test/Dev Access</a><span class="caret sparkling-dropdown"></span>
+<li id="menu-item-113" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-113 dropdown"><a href="AGM%20New%20TDMMenus.htm">Test/Dev Access</a><span class="caret sparkling-dropdown"></span>
 <ul role="menu" class=" dropdown-menu">
-	<li id="menu-item-131" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-131"><a href="file:///Users/jchajed/Downloads/AGM%20New%20TDMMenus.htm">Applications</a></li>
-	<li id="menu-item-130" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-130"><a href="file:///Users/jchajed/Downloads/AGM%20New%20TDMMenus.htm">Active Mounts</a></li>
+	<li id="menu-item-131" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-131"><a href="AGM%20New%20TDMMenus.htm">Applications</a></li>
+	<li id="menu-item-130" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-130"><a href="AGM%20New%20TDMMenus.htm">Active Mounts</a></li>
 </ul>
 </li>
-<li id="menu-item-120" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-120"><a href="file:///Users/jchajed/Downloads/AGM%20New%20TDMMenus.htm">Workflows</a></li>
-<li id="menu-item-110" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-110 dropdown"><a href="file:///Users/jchajed/Downloads/AGM%20New%20TDMMenus.htm">SLA Architect</a><span class="caret sparkling-dropdown"></span>
+<li id="menu-item-120" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-120"><a href="AGM%20New%20TDMMenus.htm">Workflows</a></li>
+<li id="menu-item-110" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-110 dropdown"><a href="AGM%20New%20TDMMenus.htm">SLA Architect</a><span class="caret sparkling-dropdown"></span>
 <ul role="menu" class=" dropdown-menu">
-	<li id="menu-item-111" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-111"><a href="file:///Users/jchajed/Downloads/AGM%20New%20TDMMenus.htm">Profiles</a></li>
-	<li id="menu-item-112" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-112"><a href="file:///Users/jchajed/Downloads/AGM%20New%20TDMMenus.htm">Templates</a></li>
+	<li id="menu-item-111" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-111"><a href="AGM%20New%20TDMMenus.htm">Profiles</a></li>
+	<li id="menu-item-112" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-112"><a href="AGM%20New%20TDMMenus.htm">Templates</a></li>
 </ul>
 </li>
-<li id="menu-item-107" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-107 dropdown"><a href="file:///Users/jchajed/Downloads/AGM%20New%20TDMMenus.htm">Monitor</a><span class="caret sparkling-dropdown"></span>
+<li id="menu-item-107" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-107 dropdown"><a href="AGM%20New%20TDMMenus.htm">Monitor</a><span class="caret sparkling-dropdown"></span>
 <ul role="menu" class=" dropdown-menu">
-	<li id="menu-item-108" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-108"><a href="file:///Users/jchajed/Downloads/AGM%20New%20TDMMenus.htm">Events</a></li>
-	<li id="menu-item-109" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-109"><a href="file:///Users/jchajed/Downloads/AGM%20New%20TDMMenus.htm">Jobs</a></li>
+	<li id="menu-item-108" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-108"><a href="AGM%20New%20TDMMenus.htm">Events</a></li>
+	<li id="menu-item-109" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-109"><a href="AGM%20New%20TDMMenus.htm">Jobs</a></li>
 </ul>
 </li>
-<li id="menu-item-105" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-105 dropdown"><a href="file:///Users/jchajed/Downloads/AGM%20New%20TDMMenus.htm">Administer</a><span class="caret sparkling-dropdown"></span>
+<li id="menu-item-105" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-105 dropdown"><a href="AGM%20New%20TDMMenus.htm">Administer</a><span class="caret sparkling-dropdown"></span>
 <ul role="menu" class=" dropdown-menu">
-	<li id="menu-item-121" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-121"><a href="file:///Users/jchajed/Downloads/AGM%20New%20TDMMenus.htm">Appliances</a></li>
-	<li id="menu-item-122" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-122"><a href="file:///Users/jchajed/Downloads/AGM%20New%20TDMMenus.htm">Hosts</a></li>
-	<li id="menu-item-123" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-123"><a href="file:///Users/jchajed/Downloads/AGM%20New%20TDMMenus.htm">LDAP</a></li>
-	<li id="menu-item-124" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-124"><a href="file:///Users/jchajed/Downloads/AGM%20New%20TDMMenus.htm">Organization</a></li>
-	<li id="menu-item-125" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-125"><a href="file:///Users/jchajed/Downloads/AGM%20New%20TDMMenus.htm">Roles</a></li>
-	<li id="menu-item-126" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-126"><a href="file:///Users/jchajed/Downloads/AGM%20New%20TDMMenus.htm">Storage Pools</a></li>
-	<li id="menu-item-127" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-127"><a href="file:///Users/jchajed/Downloads/AGM%20New%20TDMMenus.htm">Users</a></li>
+	<li id="menu-item-121" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-121"><a href="AGM%20New%20TDMMenus.htm">Appliances</a></li>
+	<li id="menu-item-122" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-122"><a href="AGM%20New%20TDMMenus.htm">Hosts</a></li>
+	<li id="menu-item-123" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-123"><a href="AGM%20New%20TDMMenus.htm">LDAP</a></li>
+	<li id="menu-item-124" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-124"><a href="AGM%20New%20TDMMenus.htm">Organization</a></li>
+	<li id="menu-item-125" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-125"><a href="AGM%20New%20TDMMenus.htm">Roles</a></li>
+	<li id="menu-item-126" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-126"><a href="AGM%20New%20TDMMenus.htm">Storage Pools</a></li>
+	<li id="menu-item-127" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-127"><a href="AGM%20New%20TDMMenus.htm">Users</a></li>
 </ul>
 </li>
 </ul></div>
